.kubernetes/kustomize/overlays/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codelab-web-staging
  namespace: codelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: tls-staging.codelab.ai
    hosts:
    - staging.codelab.ai
  rules:
  - host: staging.codelab.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codelab-api-graph-staging
  namespace: codelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: tls-api-staging.codelab.ai
    hosts:
    - api.staging.codelab.ai
  rules:
  - host: api.staging.codelab.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: api-graph
          servicePort: 4004

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codelab-hasura-staging
  namespace: codelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: tls-hasura-staging.codelab.ai
    hosts:
    - hasura.staging.codelab.ai
  rules:
  - host: hasura.staging.codelab.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: hasura
          servicePort: 8080
